--- a/test.html
+++ b/test.html
@@ -8,14 +8,33 @@
   <link rel="stylesheet" href="assets/test.css">
 </head>
 <body>
-  <div>
+  <div id="online_test" class="boxes">
     <div>
-      <label>Online Test</label>
-    </div>
-    <div>
-      ok
+      <div id="tab1" class="centered">
+        Online Test
+      </div>
+      <div class="qNo">
+        Question - 1
+      </div>
+      <div class="question">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero quae porro tenetur praesentium doloribus voluptatibus perferendis non tempora! Impedit in vero obcaecati quae inventore tenetur cum mollitia deserunt, veritatis corrupti.
+        Mollitia, amet animi similique voluptatum aliquid distinctio, odio voluptates quia minus atque debitis velit sit doloremque eveniet accusantium aspernatur quisquam commodi ipsa. Sint placeat nisi doloremque beatae? Adipisci, illo laboriosam?
+      </div>
+      <div class="answers">
+        <input type="radio" name="a" id="">&nbsp;&nbsp; Answer 1<br>
+        <input type="radio" name="a" id="">&nbsp;&nbsp; Answer 2<br>
+        <input type="radio" name="a" id="">&nbsp;&nbsp; Answer 3<br>
+        <input type="radio" name="a" id="">&nbsp;&nbsp; Answer 4
+      </div>
     </div>
   </div>
-  
+  <div id="questions" class="boxes">
+    <div >
+      <div id="tab2" class="centered">
+        Questions
+      </div>
+    </div>
+  </div>
+  <script src="assets/code.js"></script>
 </body>
 </html>
