--- a/test.html
+++ b/test.html
@@ -21,10 +21,10 @@
         Mollitia, amet animi similique voluptatum aliquid distinctio, odio voluptates quia minus atque debitis velit sit doloremque eveniet accusantium aspernatur quisquam commodi ipsa. Sint placeat nisi doloremque beatae? Adipisci, illo laboriosam?
       </div>
       <div class="answers">
-        <input type="radio" name="a" id="">&nbsp;&nbsp; Answer 1<br>
-        <input type="radio" name="a" id="">&nbsp;&nbsp; Answer 2<br>
-        <input type="radio" name="a" id="">&nbsp;&nbsp; Answer 3<br>
-        <input type="radio" name="a" id="">&nbsp;&nbsp; Answer 4
+        <span><input type="radio" name="a" id="option1">&nbsp;&nbsp;A.&nbsp;&nbsp;<label for="option1">Answer 1</label></span>
+        <span><input type="radio" name="a" id="option2">&nbsp;&nbsp;B.&nbsp;&nbsp;<label for="option2">Answer 2</label></span>
+        <span><input type="radio" name="a" id="option3">&nbsp;&nbsp;C.&nbsp;&nbsp;<label for="option3">Answer 3</label></span>
+        <span><input type="radio" name="a" id="option4">&nbsp;&nbsp;D.&nbsp;&nbsp;<label for="option4">Answer 4</label></span>
       </div>
     </div>
   </div>
@@ -32,6 +32,20 @@
     <div >
       <div id="tab2" class="centered">
         Questions
+      </div>
+    </div>
+  </div>
+  <div>
+    <div id="bottom_panel" >
+      <div class="buttons">
+        <div>
+          <button id="review">Marked for review</button>
+          <span>
+            <button id="previous">Previous</button>
+            <button id="next">Next</button>
+          </span>
+        </div>
+        <button id="submit">Submit Test</button>
       </div>
     </div>
   </div>
