--- a/rules.html
+++ b/rules.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="assets/rules.css">
 
 </head>
-<body class="centered">
+<body>
   <div class="box">
     <h1>Instructions</h1>
     <ul>
